fixed bug with hobbies-interests-projects.component not collapsing fully, adjusted font size of world populations to be more consistent

--- a/cv-website/src/app/world-populations/world-populations.component.css
+++ b/cv-website/src/app/world-populations/world-populations.component.css
@@ -21,7 +21,7 @@
     border-bottom: 1px solid #ddd;
     font-family: Arial, sans-serif;
     font-weight: bold;
-    font-size: 1.5rem;
+    font-size: 1rem;
   }
   
   .collapsible-content {
